Improved font management: distinct fonts for titles and body (defaultSansSerif and defaultSansSerifBody respectively); specified in the code which one to use to avoid fallback to wrong font. Font in posts untouched. Fix: included 'bold' font weights. Fonts are now retrieved from Google Fonts instead to be part of the repo (license purpose).

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,7 +10,7 @@ body {
   background: $white;
   font-size: 16px;
   line-height: 1.5;
-  font-family: $defaultSansSerif;
+  font-family: $defaultSansSerifBody;
   font-weight: 400;
   color: $darkerGray; // site-wide font color (overrindden multiple times...)
   
